--- a/01_React_Project/package.json
+++ b/01_React_Project/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "/",
   "dependencies": {
+    "mobx": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
